--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "src/frontend/index.html",
-        "use": "@vercel/static" 
+        "src": "src/app.js",
+        "use": "@vercel/node"
       },
       {
-        "src": "src/app.js",
-        "use": "@vercel/node" 
+        "src": "src/frontend/index.html",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/src/frontend/index.html" 
+        "dest": "src/frontend/index.html"
       }
     ]
   }
